--- a/RGEliminationMenu/Base.lproj/Main.storyboard
+++ b/RGEliminationMenu/Base.lproj/Main.storyboard
@@ -19,22 +19,32 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9mK-aL-GbI" customClass="RGEliminationMenu" customModule="RGEliminationMenu" customModuleProvider="target">
-                                <rect key="frame" x="480" y="530" width="100" height="50"/>
+                                <rect key="frame" x="20" y="530" width="100" height="50"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" placeholder="YES" id="gO6-Lh-FZG"/>
                                     <constraint firstAttribute="height" constant="50" placeholder="YES" id="mjf-n4-FmQ"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oay-6p-3dA">
+                                <rect key="frame" x="20" y="44" width="560" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="9mK-aL-GbI" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="4Wh-uL-Paf"/>
+                            <constraint firstItem="oay-6p-3dA" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="24" id="8Eh-Mh-mwP"/>
+                            <constraint firstItem="oay-6p-3dA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="ejv-An-AKR"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="oay-6p-3dA" secondAttribute="trailing" id="f0D-Vf-1Hi"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="9mK-aL-GbI" secondAttribute="bottom" constant="20" id="gRS-6Y-E2x"/>
+                            <constraint firstItem="9mK-aL-GbI" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="s0H-dK-5YI"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="eliminationMenu" destination="9mK-aL-GbI" id="Jn2-TD-W3b"/>
+                        <outlet property="infoLabel" destination="oay-6p-3dA" id="ikf-Lt-GYF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
