--- a/EliminationMenu/Base.lproj/Main.storyboard
+++ b/EliminationMenu/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RGEliminationMenu" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="EliminationMenu" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9mK-aL-GbI" customClass="RGEliminationMenu" customModule="RGEliminationMenu" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9mK-aL-GbI" customClass="EliminationMenu" customModule="EliminationMenu" customModuleProvider="target">
                                 <rect key="frame" x="20" y="530" width="100" height="50"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -43,7 +43,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="eliminationMenu" destination="9mK-aL-GbI" id="Jn2-TD-W3b"/>
+                        <outlet property="eliminationMenu" destination="9mK-aL-GbI" id="ln2-ct-Zhb"/>
                         <outlet property="infoLabel" destination="oay-6p-3dA" id="ikf-Lt-GYF"/>
                     </connections>
                 </viewController>
